# store-warehouse

./: .env.store  .env.warehouse  .env.warehouse1  .env.warehouse2  .gitignore  Dockerfile  Makefile  README.md  TASK.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: linter.yml
store_warehouse/: asgi.py  config.py  settings.py  urls.py  wsgi.py
store_warehouse/client/: apps.py  models.py  requests.py
store_warehouse/orders/: admin.py  apps.py  models.py  serializers.py  views.py
store_warehouse/orders/migrations/: 0001_initial.py  0002_auto_20230724_1710.py
store_warehouse/store/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  views.py
store_warehouse/store/migrations/: 0001_initial.py  0002_auto_20230724_1711.py  0002_storeorder_id_in_warehouse_and_more.py  0003_remove_storeorder_id_in_warehouse_and_more.py  0004_storeorder_synchronized.py  0005_remove_storeorder_synchronized_and_more.py  0006_remove_storeorder_id_in_connected_db.py
store_warehouse/warehouse/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  views.py
store_warehouse/warehouse/migrations/: 0001_initial.py  0002_auto_20230724_1711.py  0002_warehouseorder_id_in_store_and_more.py  0003_remove_warehouseorder_id_in_store_and_more.py  0004_warehouseorder_synchronized.py  0005_remove_warehouseorder_synchronized_and_more.py
